# treeze

./: .gitignore  LICENSE  README.md  docs.txt  pyproject.toml  server.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  questions.yml
.github/ISSUE_TEMPLATE/: 01-task.yml  02-bug.yml  03-feature.yml  04-refactor.yml  05-docs.yml  06-test.yml  07-optimization.yml  08-investigation.yml  PULL_REQUEST_TEMPLATE.md  config.yml
docs/: architecture.md
examples/: hello.py
treeze/: __init__.py
treeze/client/: assets.py  client.js  index.html  index.py  treeze-widgets.css
treeze/client/static/: client.js
treeze/client/static/css/core/: 00-themes.css  10-global.css
treeze/client/static/css/layouts/: layout.css  layout_style.css  layout_variant.css
treeze/client/static/css/widgets/button/: button.css  button_variant.css
treeze/core/: __init__.py  app.py  enums.py  events.py  exceptions.py  node.py  server.py  signals.py  validation.py  widget.py
treeze/core/types/: size.py  theme.py
treeze/runtime/: asgi.py  patch_engine.py  patches.py  protocol.py  session.py
treeze/utils/: ids.py
treeze/widgets/: __init__.py  button.py  container.py  layout.py  v_layout.py  window.py
treeze/widgets/bases/: container.py  layout.py
treeze/widgets/containers/: h_layout.py  v_layout.py
treeze/widgets/primitives/: button.py  spacer.py  window.py
